--- a/src/ui/colors.scss
+++ b/src/ui/colors.scss
@@ -11,6 +11,9 @@
     --color-status-warning: #c88d00; // Color for warning fallback text
     --color-background-hover-1: #f9f9f9; // Background color for large hovered elements
     --color-background-hover-2: #f5f5f5; // Background color for large active elements
+    --color-input-active-border: #2b7cff4f; // Active UI item outline (drop shadow)
+    --color-input-active-border-alternate: #ffffff4f; // Alternate active UI item outline (drop shadow)
+    
 
     // Custom colors
     --color-foreground-red: #ff1b02; // Red text color
@@ -73,7 +76,6 @@
     // Text fields
     --color-input-background: #fff; // Text field background color
     --color-input-border: #cccccc; // Text field default border color
-    --color-input-active-border: #4d91fe4f; // Active text field border color (thicker)
     --color-input-error-border: #ff190058; // Text field with error border color (thicker)
     --color-input-error-message: #ff1900; // Error message above fields with errors background color
     --color-input-error-message-text: #fff; // Error message above fields with errors text color
@@ -170,6 +172,9 @@
         --color-status-warning: var(--color-notification-border-warning); // Color for warning fallback text
         --color-background-hover-1: rgb(25, 25, 26); // Background color for large hovered elements
         --color-background-hover-2: rgb(30, 30, 32); // Background color for large active elements
+        --color-input-active-border: #1770ff65; // Active UI item outline (drop shadow)
+        --color-input-active-border-alternate: rgba(0, 0, 0, 0.31); // Alternate active UI item outline (drop shadow)
+        
 
         // Custom colors
         --color-foreground-red: #ff1b02; // Red text color
@@ -228,7 +233,6 @@
         // Text fields
         --color-input-background: rgb(29, 29, 31); // Text field background color
         --color-input-border: rgb(72, 72, 75); // Text field default border color
-        --color-input-active-border: #1770ff65; // Active text field border color (thicker)
         --color-input-error-border: #ff3b257c; // Text field with error border color (thicker)
         --color-input-error-message: #ff1900; // Error message above fields with errors background color
         --color-input-error-message-text: #fff; // Error message above fields with errors text color
